--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,16 @@ dependencies {
 
     // Use the Kotlin JUnit integration.
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
+
+    compile "org.jetbrains.kotlin:kotlin-stdlib:1.3.0"
 }
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'port_forwarder.AppKt'
+    }
+
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+}
 // Define the main class for the application.
 mainClassName = 'port_forwarder.AppKt'
